# wouri

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
worker/: Cargo.toml
worker/src/: main.rs
worker/src/application/: mod.rs
worker/src/application/actors/: mod.rs  task_actor.rs
worker/src/application/dtos/: mod.rs  task_dtos.rs
worker/src/application/services/: task_service.rs
worker/src/domain/: mod.rs
worker/src/domain/entities/: task.rs
worker/src/domain/events/: mod.rs  task_server_event.rs
worker/src/domain/repositories/: task_repository.rs  task_repository.rs~
worker/src/domain/services/: task_service.rs
worker/src/infrastructure/: configs.rs  mod.rs  web.rs
worker/src/infrastructure/actors/: mod.rs  task_actor_pool.rs
worker/src/infrastructure/db/: connection.rs  mod.rs  redis_connection.rs
worker/src/infrastructure/repositories/: mod.rs  redis_task_repository.rs
worker/src/presentation/handlers/: mod.rs  probe_handler.rs  task_handler.rs
worker/src/presentation/routes/: mod.rs  probe_route.rs  task_route.rs
worker/src/shared/: app_state.rs  errors.rs  mod.rs
