[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.8.0"
tokio = { version = "1.39.2", features = ["full"] }
log4rs = "1.3.0"
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.30"
thiserror = "1.0.63"
clap = "4.5.13"
redis = "0.26.1"
r2d2 = "0.8.10"
lapin = "2.0.0"
serde = "1.0.130"
serde_json = "1.0.68"